2017-05-03  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_ssh.c: Remove preprocessor directives to check
	the libssh version and the code related to old libssh version.
	(my_ssh_key_s, my_ssh_key_free, remove_and_free_temp_key_file)
	(my_ssh_pki_import_privkey_base64, my_ssh_userauth_try_publickey)
	(my_ssh_userauth_publickey): Remove functions and structs.
	(nasl_ssh_connect, nasl_ssh_userauth): Remove no longer required
	code inside preprocessor directives to check the libssh version.

	* nasl/nasl_ssh.h: Remove include libssh/legacy.h.


2017-05-02  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_builtin_find_service.c (plugin_do_run): Increase default
	connection timeout to 20 seconds.

2017-05-02  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto.c (nasl_ntlm2_response): Improve code style.

	* nasl/smb_crypt.c (E_deshash_ntlmssp): Improve code style.

2017-04-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.c (recv_line): Don't set timeout for select() call, as
	client closing connection case is correctly handled.

	* src/comm.c (comm_wait_order): Use g_warning() instead of g_debug().

2017-04-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.c (open_socket), nasl/lint.c (nasl_lint_def)
	(nasl_lint_call), nasl/nasl_grammar.y (mylex), nasl/nasl_var.c
	(get_array_elem, nasl_read_var_ref): Use fallthrough comment to fix
	GCC 7 warnings.

2017-04-24  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* INSTALL: Change libssh version dependency. Now list 0.6 instead
	of 0.5.

	* nasl/CMakeLists.txt: Check for libssh version 0.6 instead of 0.5.

	* nasl/nasl_init.c (libfuncs): Remove version check for libssh.
	(libivars): Remove _HAVE_LI_BSSH variable and related comments.

2017-04-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/attack.c (attack_start, launch_plugin): Use consistent
	hostname (ip) logging. Add fqdn to the messages.
